// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:dropdown-button 1`] = `
<div>
  <div
    class="a-DropDown  is-opened show"
  >
    <button
      class="a-Button a-Button--primary"
    >
      <span
        class="a-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-caret"
          icon="caret"
        />
      </span>
    </button>
    <ul
      class="a-DropDown-menu"
    >
      <li
        class=""
      >
        <a
          class=""
        >
          按钮
        </a>
      </li>
      <li
        class=""
      >
        <a
          class=""
        >
          按钮
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Renderer:dropdown-button 2`] = `
<div>
  <div
    class="a-DropDown  show"
  >
    <button
      class="a-Button a-Button--primary"
    >
      <span
        class="a-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-caret"
          icon="caret"
        />
      </span>
    </button>
  </div>
</div>
`;
